# BSC-ops-admin

./: .gitignore  README.md  process_new_entries.py  pyproject.toml
bsc_ops_admin/: process_new_down_hours.py  utils.py
templates/: cc_email_template.txt  courtesy_notice_email_template.txt  pending_termination_email_template.txt
